<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="Julian.Matiz.gradecalculator.MainActivity">

    <Button
        android:id="@+id/activity_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:onClick="switch_activity"
        android:text="@string/course_grade_calculator" />


    <EditText
        android:layout_marginTop="25dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/user_Input1"
        android:layout_centerHorizontal="true"
        android:hint="@string/course_hint"
        android:layout_below="@+id/activity_Button"
        android:textColorHint="@color/colorAccent"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/user_Input2"
        android:layout_below="@+id/user_Input1"
        android:layout_centerHorizontal="true"
        android:hint="@string/grade_hint"
        android:textColorHint="@color/colorAccent"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add"
        android:id="@+id/add_Button"
        android:layout_below="@+id/user_Input2"
        android:layout_alignStart="@+id/user_Input2"
        android:layout_marginTop="20dp"
        android:onClick="addButtonClicked" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Delete"
        android:id="@+id/delete_Button"
        android:layout_alignTop="@+id/add_Button"
        android:layout_alignEnd="@+id/user_Input2"
        android:onClick="deleteButtonClicked" />

    <TextView
        android:id="@+id/records_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_Button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Calculate GPA"
        android:id="@+id/gpa_Button"
        android:layout_below="@+id/records_TextView"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:onClick="gpaButtonClicked" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CLEAR"
        android:id="@+id/clear_Button"
        android:layout_below="@+id/records_TextView"
        android:layout_marginTop="20dp"
        android:layout_alignParentEnd="true"
        android:onClick="clearButtonClicked" />

    <TextView
        android:id="@+id/gpa_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gpa_Button"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:text="GPA"
        android:textAppearance="?android:attr/textAppearanceLarge" />


</RelativeLayout>
